Security fix and API improvement
- Replace real database credentials in .env.example with placeholders
- Make sessionId optional in save endpoint (backend generates if not provided)
- Improve request validation to only require messages array

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ FRONTEND_URL=http://localhost:5173
 # Database Configuration
 # Local Development: Use direct PostgreSQL connection
 # Production: Will be retrieved from Google Secret Manager
-DATABASE_URL=postgresql://postgres:jcwZ4aBSbCf5gv7ozYvf@localhost:5432/tech_spec_gen
+DATABASE_URL=postgresql://username:password@localhost:5432/your_database_name
 
 # Google Cloud Platform Configuration
 # Required for both local development and production
@@ -20,4 +20,4 @@ GOOGLE_APPLICATION_CREDENTIALS=./keys/service-account.json
 
 # Production Only: Cloud SQL instance connection name
 # Format: project:region:instance-name
-# CLOUD_SQL_CONNECTION_NAME=your-project:us-central1:tech-spec-gen-db
+# CLOUD_SQL_CONNECTION_NAME=your-project:us-central1:your-instance-name
